# jnn

./: CMakeLists.txt  README.md
libjnn/: CMakeLists.txt  jnn.c
libjnn/include/: jnn.h
